--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,7 +30,7 @@
         android:id="@+id/sampleButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="68dp"
+        android:layout_marginBottom="40dp"
         android:text="設定"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -72,5 +72,21 @@
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteY="258dp"
         tools:layout_editor_absoluteX="48dp" />
+
+    <CheckBox
+        android:id="@+id/overTimeCheckBox"
+        android:layout_width="97dp"
+        android:layout_height="33dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginTop="16dp"
+        android:cursorVisible="false"
+        android:enabled="false"
+        android:scaleX="1.5"
+        android:scaleY="1.5"
+        android:text="@string/over_time_work"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/footerView"
+        tools:layout_editor_absoluteX="220dp"
+        tools:layout_editor_absoluteY="323dp" />
 
 </android.support.constraint.ConstraintLayout>
