--- a/app/src/main/res/menu/menu_app.xml
+++ b/app/src/main/res/menu/menu_app.xml
@@ -1,10 +1,8 @@
-<?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <item android:id="@+id/action_settings"
         android:title="@string/action_settings"
         android:orderInCategory="100"
-        android:showAsAction="always"
-        android:icon="@drawable/ic_setting"
-        tools:ignore="AppCompatResource"/>
+        app:showAsAction="ifRoom"
+        android:icon="@drawable/ic_setting"/>
 </menu>
