--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,93 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.example.swaptv.calcsalary.MainActivity">
+    android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/dateView"
         android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="20dp"
         android:textSize="24sp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/headerView"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:text="あなたは本日"
+        android:textSize="36sp"
+        android:gravity="center"
         android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_above="@id/resultView" />
 
     <TextView
         android:id="@+id/resultView"
-        android:layout_width="317dp"
-        android:layout_height="104dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
         android:gravity="center"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginLeft="10dp"
         android:text=""
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         android:textSize="70sp"
         android:textStyle="bold"
         android:background="@drawable/frame_style"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.504"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/headerView"
-        tools:layout_editor_absoluteY="141dp"
-        tools:layout_editor_absoluteX="42dp" />
-
-    <TextView
-        android:id="@+id/headerView"
-        android:layout_width="250dp"
-        android:layout_height="47dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="120dp"
-        android:gravity="center"
-        android:text="あなたは本日"
-        android:textSize="36sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="60dp"
-        tools:layout_editor_absoluteY="67dp" />
+        android:layout_above="@id/footerView" />
 
     <TextView
         android:id="@+id/footerView"
-        android:layout_width="251dp"
+        android:layout_width="match_parent"
         android:layout_height="47dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="20dp"
-        android:gravity="center"
+        android:layout_marginTop="10dp"
         android:text="稼いでいます"
+        android:layout_centerVertical="true"
+        android:gravity="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         android:textSize="36sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/resultView"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteY="258dp"
-        tools:layout_editor_absoluteX="48dp" />
+        android:textStyle="bold" />
 
     <CheckBox
         android:id="@+id/overTimeCheckBox"
-        android:layout_width="97dp"
-        android:layout_height="33dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginTop="16dp"
+        android:layout_width="100dp"
+        android:layout_height="30dp"
         android:cursorVisible="false"
         android:enabled="false"
         android:scaleX="1.5"
         android:scaleY="1.5"
         android:text="@string/over_time_work"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/footerView"
-        tools:layout_editor_absoluteX="220dp"
-        tools:layout_editor_absoluteY="323dp" />
+        android:layout_below="@id/footerView"
+        android:layout_marginTop="20dp"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="15dp"/>
 
-</android.support.constraint.ConstraintLayout>
+    <net.nend.android.NendAdView
+        android:id="@+id/nend"
+        NendApiKey="33ba0e9c8877f18b5a9d0be8ff96591160acca82"
+        NendSpotId="806514"
+        android:layout_width="320dp"
+        android:layout_height="50dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
+
+</RelativeLayout>
