--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,7 +33,7 @@
         android:layout_marginLeft="10dp"
         android:text=""
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-        android:textSize="70sp"
+        android:textSize="64sp"
         android:textStyle="bold"
         android:background="@drawable/frame_style"
         android:layout_above="@id/footerView" />
@@ -50,24 +50,59 @@
         android:textSize="36sp"
         android:textStyle="bold" />
 
-    <CheckBox
-        android:id="@+id/overTimeCheckBox"
-        android:layout_width="100dp"
-        android:layout_height="30dp"
-        android:cursorVisible="false"
-        android:enabled="false"
-        android:scaleX="1.5"
-        android:scaleY="1.5"
-        android:text="@string/over_time_work"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_below="@id/footerView"
         android:layout_marginTop="20dp"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="15dp"/>
+        android:orientation="vertical">
+
+        <CheckBox
+            android:id="@+id/overTimeCheckBox"
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:layout_marginRight="38dp"
+            android:layout_marginBottom="10dp"
+            android:cursorVisible="false"
+            android:layout_gravity="right"
+            android:enabled="false"
+            android:scaleX="1.5"
+            android:scaleY="1.5"
+            android:text="@string/over_time_work" />
+
+        <LinearLayout
+            android:id="@+id/twitterArea"
+            android:layout_width="wrap_content"
+            android:layout_height="35dp"
+            android:layout_marginRight="10dp"
+            android:layout_gravity="right"
+            android:padding="5dp">
+
+            <ImageView
+                android:layout_width="28dp"
+                android:layout_height="28dp"
+                android:src="@drawable/twitter_ico"
+                android:scaleType="fitCenter" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Twitterに投稿"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
+                android:layout_gravity="center_vertical"
+                android:textSize="18sp"/>
+
+        </LinearLayout>
+
+    </LinearLayout>
+
 
     <net.nend.android.NendAdView
         android:id="@+id/nend"
         NendApiKey="33ba0e9c8877f18b5a9d0be8ff96591160acca82"
         NendSpotId="806514"
+        android:layout_marginBottom="10dp"
         android:layout_width="320dp"
         android:layout_height="50dp"
         android:layout_alignParentBottom="true"
